--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.35.0",
+    "faker": "5.5.3",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -22,13 +23,16 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.35.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "5.5.3",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "miragejs": "^0.1.43",
     "typescript": "^4.6.2"
   }
 }
