--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.35.0",
+    "axios": "^0.26.1",
     "faker": "5.5.3",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
